adding base template and working views on the queue

--- a/mrna/templates/base.html
+++ b/mrna/templates/base.html
@@ -24,6 +24,7 @@
         {{ render_field(form.subject) }}
         {{ render_field(form.sender) }}
         {{ render_field(form.message) }}
+        {{ render_field(form.nospam) }}
       </dl>
       <input type='submit' value='Send Message' />
     </form>
