successfully added a hidden field to increase security and act as a honey pot

--- a/mrna/templates/base.html
+++ b/mrna/templates/base.html
@@ -24,7 +24,7 @@
         {{ form.hidden_tag() }} 
         {{ render_field(form.subject) }}
         {{ render_field(form.sender) }}
-        {{ render_field(form.message) }}
+        {{ render_field(form.emessage) }}
         {{ render_field(form.nospam) }}
       </dl>
       <input type='submit' value='Send Message' />
